imvirt (0.3.3) unstable; urgency=low

  * Make modern GCC versions stop warning about breaking
    strict-aliasing checking.

 -- 

imvirt (0.3.2) unstable; urgency=low

  * Handle SIGILL on amd64 for Xen PV detection gracefully.
     reported by Patrick Matthäi <patrick.matthaei@web.de>
  * Fix false positive CPUID results interpreted as HVM
    virtualization on P4.
     (Closes Debian Bug#566656 by Stephan Sürken)
  * Add CPUID debug code (-c).
  * Add missing stdlib.h to detect.c (compile warning).

 -- Thomas Liske <liske@ibh.de>  Mon, 01 Feb 2010 14:56:15 +0100

imvirt (0.3.1) unstable; urgency=low

  * Add missing manpage (svn was somewhat confused).

  * Fix build system.

 -- Thomas Liske <liske@ibh.de>  Sat, 12 Sep 2009 21:09:22 +0200

imvirt (0.3) unstable; urgency=low

  * Add manpage from Debian,
     thanks to Patrick Matthäi <patrick.matthaei@web.de>

  * Add OpenVZ/Virtuozzo detection
     taken from virt-what 1.1 (Evgeniy Sokolov)

  * Add UML detection

  * Add binary helper to detect
      - Virtual PC/Server
      - VMware
      - Xen
     HVM using cpuid calls.

  * Improvements/fixes:
    - fix dmesg call
    - scan /proc/ide/hd*/model for well known signatures

 -- Thomas Liske <liske@ibh.de>  Sat Sep  5 12:36:18 CEST 2009

imvirt (0.2.1) unstable; urgency=low

  * Fix Xen detection on new kernels (i.e. Debian Lenny).

 -- Thomas Liske <liske@ibh.de>  Thu, 12 Mar 2009 10:19:00 +0100

imvirt (0.2) unstable; urgency=low

  * Move to SF project apt-dater.
  * Add copyright stuff and ChangeLog.

 -- Thomas Liske <liske@ibh.de>  Wed, 26 Nov 2008 13:19:24 +0100

imvirt (0.1-r10) unstable; urgency=low

  * Use /bin/dmesg (/var/log/dmesg not always accessible).
  * Improve rules to detect VMware server 2.0.

 -- Thomas Liske <liske@ibh.de>  Tue, 25 Nov 2008 13:10:50 +0100

imvirt (0.1-r9) unstable; urgency=low

  * Minor bugfix release.

 -- Thomas Liske <liske@ibh.de>  Thu, 20 Nov 2008 07:52:53 +0100

imvirt (0.1-r5) unstable; urgency=low
