@@ -4,7 +4,7 @@
 AC_REVISION($Revision$)
 
 AC_PREREQ(2.61)
-AC_INIT(imvirt, 0.3, liske@ibh.de)
+AC_INIT(imvirt, 0.3.3, liske@ibh.de)
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([helper/detect.c])
 AC_CONFIG_HEADER([helper/config.h])
@@ -42,6 +42,7 @@ AC_CONFIG_FILES([
 Makefile
 helper/Makefile
 man/Makefile
+imvirt.spec
 ])
 
 AC_OUTPUT
